--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,9 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
-  width: 40px;
-  height: 40px;
+  background: #25D366;
+  width: 50px;
+  height: 50px;
   border-radius: 50px;
   transition: all 0.4s;
 }
@@ -58,7 +58,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #2eafec;
+  background: #25D399;
   color: #fff;
 }
 
